--- a/Form/Site.Master
+++ b/Form/Site.Master
@@ -5,8 +5,10 @@
 <html>
 <head runat="server">
     <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
+    
         <style type="text/css">
+
+
 
 
         .auto-style2 {
@@ -22,13 +24,13 @@
             margin-bottom: 0px;
         }
         .auto-style5 {
-            height: 112px;
+            height: 78px;
         }
     </style>
 
-    </asp:ContentPlaceHolder>
+   
 </head>
-<body style="height: 1507px; width: 1385px; margin-left: 72px;">
+<body style="height: 1490px; width: 1385px; margin-left: 72px;">
     
 
     <form id="form1" runat="server">
@@ -36,6 +38,8 @@
         
      
         <div class="auto-style2" style="background-color: transparent; background-image: url(Images/backgroundc.jpg);">
+
+            <asp:TextBox ID="TextBox1" runat="server" BackColor="#003366" BorderColor="Black" BorderStyle="Solid" Font-Names="Bahnschrift Condensed" Font-Size="Larger" ForeColor="Red" Height="128px" Width="1372px">GamerBay</asp:TextBox>
 
         </div>
         <div class="auto-style3" style="padding: 11px; margin: 20px">
@@ -53,21 +57,24 @@
         </div>
         
      
-         <asp:ContentPlaceHolder ID ="Body" runat="server">
+         
 
     <div class="auto-style4">
-       
-       
+       <asp:ContentPlaceHolder ID ="Body" runat="server">
+
+
+
+       </asp:ContentPlaceHolder>
     </div>
 
-        </asp:ContentPlaceHolder>
+        
     <div class="auto-style5" style="text-align: center">
         Contact us with 
-        <asp:ImageButton ID="ImageButton1" runat="server" Height="105px" ImageUrl="~/Images/facebookl.png" OnClick="ImageButton1_Click" Width="109px" />
+        <asp:ImageButton ID="ImageButton1" runat="server" Height="48px" ImageUrl="~/Images/facebookl.png" OnClick="ImageButton1_Click" Width="45px" />
 &nbsp;
-        <asp:ImageButton ID="ImageButton2" runat="server" Height="92px" ImageUrl="~/Images/twitter.png" Width="100px" />
+        <asp:ImageButton ID="ImageButton2" runat="server" Height="42px" ImageUrl="~/Images/twitter.png" Width="43px" />
 &nbsp;
-        <asp:ImageButton ID="ImageButton3" runat="server" Height="89px" ImageUrl="~/Images/insta.png" Width="101px" />
+        <asp:ImageButton ID="ImageButton3" runat="server" Height="55px" ImageUrl="~/Images/insta.png" Width="55px" />
     </div>
         
      
