--- a/Form/Site.Master
+++ b/Form/Site.Master
@@ -24,8 +24,14 @@
             margin-bottom: 0px;
         }
         .auto-style5 {
-            height: 78px;
-        }
+            height: 90px;
+                width: 1378px;
+            }
+            .auto-style6 {
+                height: 116px;
+                width: 1382px;
+                margin-top: 0px;
+            }
     </style>
 
    
@@ -37,11 +43,13 @@
 
         
      
-        <div class="auto-style2" style="background-color: transparent; background-image: url(Images/backgroundc.jpg);">
-
-            <asp:TextBox ID="TextBox1" runat="server" BackColor="#003366" BorderColor="Black" BorderStyle="Solid" Font-Names="Bahnschrift Condensed" Font-Size="Larger" ForeColor="Red" Height="128px" Width="1372px">GamerBay</asp:TextBox>
+        <div class="auto-style2" style="background-color: darkblue; ">
+          <br>
+          <br>
+        <h1 class="auto-style6" style="text-align: center; color: #FF0000;">GamerBay </h1>
 
         </div>
+
         <div class="auto-style3" style="padding: 11px; margin: 20px">
             <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" OnMenuItemClick="Menu1_MenuItemClick" Height="12px">
                 <Items>
@@ -70,11 +78,11 @@
         
     <div class="auto-style5" style="text-align: center">
         Contact us with 
-        <asp:ImageButton ID="ImageButton1" runat="server" Height="48px" ImageUrl="~/Images/facebookl.png" OnClick="ImageButton1_Click" Width="45px" />
+        <asp:ImageButton ID="ImageButton1" runat="server" Height="48px" ImageUrl="~/Images/facebookl.png" OnClick="ImageButton1_Click" Width="45px" class="img-fluid" />
 &nbsp;
-        <asp:ImageButton ID="ImageButton2" runat="server" Height="42px" ImageUrl="~/Images/twitter.png" Width="43px" />
+        <asp:ImageButton ID="ImageButton2" runat="server" Height="42px" ImageUrl="~/Images/twitter.png" Width="43px" class="img-fluid" />
 &nbsp;
-        <asp:ImageButton ID="ImageButton3" runat="server" Height="55px" ImageUrl="~/Images/insta.png" Width="55px" />
+        <asp:ImageButton ID="ImageButton3" runat="server" Height="58px" ImageUrl="~/Images/insta.png" Width="55px" class="img-fluid"/>
     </div>
         
      
